# Odin

backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  repository.py  scheduler.py  worker.py
backend/app/api/: alerts.py  reports.py  settings.py
backend/app/services/: alert_pipeline.py  alerting.py  clob_ws_client.py  decision_engine.py  enrichment_pipeline.py  explanation_engine.py  gamma_client.py  instrument_mapper.py  openai_client.py  polymarket_client.py  polymarket_universe.py  public_sources.py  report_pipeline.py  report_sender.py  reporting.py  retention.py  scoring.py  signal_engine.py  source_registry.py
backend/tests/: test_alert_pipeline.py  test_alerting.py  test_alerts_api.py  test_clob_ws_client.py  test_db_init.py  test_decision_engine.py  test_enrichment_pipeline.py  test_explanation_engine.py  test_gamma_client.py  test_health.py  test_instrument_mapper.py  test_models.py  test_openai_client.py  test_polymarket_client.py  test_polymarket_universe.py  test_public_sources.py  test_report_pipeline.py  test_report_sender.py  test_reports_api.py  test_repository.py  test_scheduler.py  test_scoring.py  test_settings_api.py  test_signal_engine.py  test_source_registry.py  test_worker.py
docs/plans/: 2026-01-15-polymarket-monitor-design.md
frontend/: package-lock.json  package.json
frontend/__tests__/: page.test.tsx
frontend/src/app/: page.tsx
